--- a/gb/nsc1002.md
+++ b/gb/nsc1002.md
@@ -2,7 +2,7 @@
 <tr><td><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/24/n13045323.md#1" target="_blank"> 病毒源头2可能 专家：找到源头关乎所有人安危</a><br></h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/24/n13045323.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2021/06/id13052282-GettyImages2-1889380-320x200.jpg"></a></td></tr>
 <tr><td><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/17/n13029449.md#1" target="_blank"> 打辉瑞、莫德纳疫苗出现心脏问题？警惕3症状</a><br></h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/17/n13029449.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2021/06/id13029594-GettyImages-1291379334-320x200.jpg"></a></td></tr>
 <tr><td><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/21/n13037340.md#1" target="_blank"> 瘦小腹很简单！消内脏脂肪食物前10名</a><br></h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/21/n13037340.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2021/06/id13040712-shutterstock_380345182-320x200.jpg"></a></td></tr>
-<tr><td><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/29/n13055726.md#1" target="_blank"> 【直播】85%的人会有腰背痛？1种腰痛要小心</a><br></h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/29/n13055726.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2021/06/id13055740-6.29.21-webb-Health-Live-320x200.jpg"></a></td></tr>
+<tr><td><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/29/n13055726.md#1" target="_blank"> 【重播】85%的人会有腰背痛？1种腰痛要小心</a><br></h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/29/n13055726.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2021/06/id13055740-6.29.21-webb-Health-Live-320x200.jpg"></a></td></tr>
 <tr><td><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/25/n13047332.md#1" target="_blank"> 【重播】影响疫苗效果的3个原因</a><br></h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/25/n13047332.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2021/06/id13047342-6.25.21-web-Health-Live-320x200.jpg"></a></td></tr>
 <tr><td><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/24/n13044629.md#1" target="_blank"> 【重播】诺瓦瓦克斯疫苗 比mRNA更强？</a><br></h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/24/n13044629.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2021/06/id13044643-6.24.21-web-Health-Live-320x200.jpg"></a></td></tr>
 <tr><td><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/2/2/n12728416.md#1" target="_blank">玫瑰疹如何与新冠区分？1秘诀判断 教你正确处理</a><br></h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/2/2/n12728416.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2021/06/id13005332-shutterstock_713896126-320x200.jpg"></a></td></tr>
@@ -27,6 +27,6 @@
 <h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/25/n13048027.md#1" target="_blank">牙周病是吃出来的？3类食物可能是元凶</a><br></h3>
 <h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/28/n13052428.md#1" target="_blank">20种最棒的激瘦食物 不用大量运动也能瘦</a><br></h3>
 <h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/28/n13052817.md#1" target="_blank">早上喝一杯防便秘 营养师：牛奶和它是黄金组合</a><br></h3>
-<h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/29/n13055726.md#1" target="_blank">【直播】85%的人会有腰背痛？1种腰痛要小心</a><br></h3>
+<h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/29/n13055726.md#1" target="_blank">【重播】85%的人会有腰背痛？1种腰痛要小心</a><br></h3>
 <tr><td><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/nsc1002.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/mjhpml342/djy/blob/master/gb/nsc1002_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/mjhpml342/djy/blob/master/gb/nsc1002_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/mjhpml342/djy/blob/master/gb/nsc1002_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/mjhpml342/djy/blob/master/gb/nsc1002_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/mjhpml342/djy/blob/master/gb/nsc1002_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/mjhpml342/djy/blob/master/gb/nsc1002_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/mjhpml342/djy/blob/master/gb/nsc1002_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/mjhpml342/djy/blob/master/gb/nsc1002_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/mjhpml342/djy/blob/master/gb/nsc1002_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/mjhpml342/djy/blob/master/gb/nsc1002_2.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/mjhpml342/djy/blob/master/gb/nsc1002.md#1<br><a href="https://github.com/mjhpml342/djy/blob/master/gb/nsc1002.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/mjhpml342/djy/blob/master/gb/nsc1002.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nsc1002.htm">https://www.epochtimes.com/gb/nsc1002.htm</a>    （国内需<a href="https://github.com/mjhpml342/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
